# cribbage-zero

./: .gitignore  README.md  VERSION  actor.html  chrome.js  dev.html  eval.html  history.html  index.html  local.html  netstore.js  package.json  progress-hard.csv  progress-random.csv  progress.html  refresh-trainer.html  release-trainer.html  settings.js  snapshot.html  version.js  worker.html
.github/workflows/: android-ci.yml  android-release.yml  pages.yml  snapshot-net.yml  train.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: .gitkeep
android/app/src/main/cpp/: CMakeLists.txt  cz_jni.cpp
android/app/src/main/java/dev/cribbage/zero/: MainActivity.java  NativeBridge.java  SelfPlayService.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
checkpoints/: info.json
core/: CMakeLists.txt  actor.h  buffer.h  bus.h  cards.h  eval.h  game.h  github.h  hardbot.h  http.h  http_curl.h  mcts.h  net.h  net_io.h  parallel.h  rng.h  sample.h  scoring.h  selfplay.h
core/tests/: test_actor.cpp  test_guards.cpp  test_hardbot.cpp  test_http.cpp  test_net.cpp  test_netio.cpp  test_orchestration.cpp  test_scoring.cpp  test_selfplay.cpp
docs/: BUS.md  CRIBBAGE_ZERO.md
engine/: az_common.js  az_contribute.js  az_game.js  az_mcts.js  az_net.js  az_parallel.js  az_seed.json  az_sync.js  az_train.js  az_trainer.js  az_worker.js  build-bundle.sh  eval_zero.js  snapshot_net.js  verify_sync.js
pc/: main.cpp
snapshots/: 294815g-iter596-64wide-final.json  evals.json
src/: engine.js  winprob.js
test/: browser.mjs  local.mjs
worker/: az_worker_thread.js
worker-api/: package.json  schema.sql  test.js  wrangler.toml
worker-api/src/: index.js
